# pw-reporters

./: README.md
.github/workflows/: ci.yml
py/: .gitignore  README.md  pyproject.toml  pytest.ini
py/pytest_pw_reporter/: __init__.py  instrumentation.py  plugin.py  reporter.py
py/tests/: conftest.py  test_evals.py
thoughts/shared/plans/: 2025-12-09-har-construction-algorithm.md  2025-12-09-json-schema-generation.md  2025-12-09-json-serialization-layer.md  2025-12-09-pw-reporter-library.md  2025-12-10-add-git-info-to-test-start.md
thoughts/shared/research/: 2025-12-10-add-command-info-to-test-event.md  playwright-reporter-types.md  playwright-trace-format.md
ts/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SERVER_API.md  e2e-test.ts  example-reporter.ts  package.json  playwright.config.ts  reporter.ts  tsconfig.build.json  ws.ts
ts/examples/: sample-dump.txt
ts/examples/tests/: acceptance.spec.ts  evals-page.pom.ts
ts/examples/tests/buttons/: acceptance.spec.ts
ts/examples/tests/table/: acceptance.spec.ts
ts/hacks/: example-ws.ts
ts/lib/: README.md
ts/lib/src/: command.test.ts  command.ts  git.test.ts  git.ts  index.ts  reporter.ts  serializers.test.ts  serializers.ts  types.ts
ts/lib/src/uploader/: file-scanner.ts  http-uploader.ts  index.ts
ts/lib/src/websocket/: client.ts  message-queue.ts
ts/schemas/: reporter-events.schema.json
ts/tests/: evals.spec.ts
