[project]
name = "pytest-pw-reporter"
version = "0.1.0"
description = "Automatic step-level reporting for Playwright tests"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.40.0",
    "pytest>=8.0.0",
]

[dependency-groups]
dev = [
    "playwright==1.55.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-playwright>=0.7.0",
]

[project.entry-points.pytest11]
pw_reporter = "pytest_pw_reporter.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytest_pw_reporter"]
